syntax = "proto3";
import "google/protobuf/descriptor.proto";
package io.harness.eventsframework;

option java_multiple_files = true;

extend google.protobuf.EnumValueOptions {
  string streamName = 12345;
}

// streamName is auto generated while using in code
// Added here just for documentation purpose.
enum StreamChannel { PROJECT_UPDATE = 0 [(streamName) = "streams:project_update"]; }